--- a/Contoso.Web/student.list.html
+++ b/Contoso.Web/student.list.html
@@ -1,30 +1,23 @@
-﻿<table class="table">
+﻿<table class="table" ng-init="getStudents()">
     <thead>
     <tr>
         <th scope="col">#</th>
-        <th scope="col">First</th>
-        <th scope="col">Last</th>
-        <th scope="col">Handle</th>
+        <th scope="col">First Name</th>
+        <th scope="col">Last Name</th>
+        <th scope="col">Roll</th>
+        <th scope="col">Department</th>
     </tr>
     </thead>
     <tbody>
-    <tr>
-        <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td>@mdo</td>
+    <tr ng-repeat="student in students">
+        <th scope="row">{{student.Id}}</th>
+        <td>{{student.FirstName}}</td>
+        <td>{{student.LastName}}</td>
+        <td>{{student.Roll}}</td>
+        <td>{{student.Department}}</td>
+        <td><a ui-sref="editStudent({studentId: student.Id})" class="btn btn-info"> Edit </a></td>
+        <td><a class="btn btn-danger" ng-click="deleteStudent(student.Id)"> Delete </a></td>
     </tr>
-    <tr>
-        <th scope="row">2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
-        <td>@fat</td>
-    </tr>
-    <tr>
-        <th scope="row">3</th>
-        <td>Larry</td>
-        <td>the Bird</td>
-        <td>@twitter</td>
-    </tr>
+
     </tbody>
 </table>
