added error and success messages

--- a/Contoso.Web/index.html
+++ b/Contoso.Web/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <link href="Content/bootstrap.css" rel="stylesheet" />
     <title></title>
+    <link href="Content/angular-toastr.css" rel="stylesheet" />
 </head>
 <body ng-controller="StudentController">
 
@@ -17,6 +18,7 @@
     <h2>{{whatisangularjs}}</h2>
     <script src="Scripts/angular.js"></script>
     <script src="Scripts/angular-ui-router.js"></script>
+    <script src="Scripts/angular-toastr.tpls.js"></script>
     <script src="contoso.js"></script>
     <script src="router.js"></script>
     <script src="StudentController.js"></script>
