--- a/Contoso.Web/index.html
+++ b/Contoso.Web/index.html
@@ -17,6 +17,7 @@
     <h1>{{whatisjavascript}}</h1>
     <h2>{{whatisangularjs}}</h2>
     <script src="Scripts/angular.js"></script>
+    <script src="Scripts/angular-resource.js"></script>
     <script src="Scripts/angular-ui-router.js"></script>
     <script src="Scripts/angular-toastr.tpls.js"></script>
     <script src="contoso.js"></script>
