added photo on student list - get 404 error but working

--- a/Contoso.Web/index.html
+++ b/Contoso.Web/index.html
@@ -22,6 +22,7 @@
     <script src="Scripts/angular-toastr.tpls.js"></script>
     <script src="contoso.js"></script>
     <script src="router.js"></script>
+    <script src="uploadPhoto.js"></script>
     <script src="StudentController.js"></script>
 </body>
 </html>
