added photo review plus pagination

--- a/Contoso.Web/index.html
+++ b/Contoso.Web/index.html
@@ -1,10 +1,11 @@
 ﻿<!DOCTYPE html>
 <html ng-app="contosoApp">
 <head>
+    <title></title>
     <meta charset="utf-8" />
     <link href="Content/bootstrap.css" rel="stylesheet" />
-    <title></title>
     <link href="Content/angular-toastr.css" rel="stylesheet" />
+    <script src="http://localhost:55742/Scripts/jquery-3.3.1.js"></script>
 </head>
 <body ng-controller="StudentController">
 
@@ -22,7 +23,8 @@
     <script src="Scripts/angular-toastr.tpls.js"></script>
     <script src="contoso.js"></script>
     <script src="router.js"></script>
-    <script src="uploadPhoto.js"></script>
     <script src="StudentController.js"></script>
+    <script src="uploadPhoto.js"></script>
+    <script src="dirPagination.js"></script>
 </body>
 </html>
